# OTIS-2025

.github/workflows/: ci-docs-ii002713.yml  ii002713_docs.yml  ii002713docs.yml  jekyll-gh-pages.yml
trunk/ii002713/task_01/doc/: README.MD
trunk/ii002713/task_01/src/: CMakeLists.txt  task_01.cpp
trunk/ii002713/task_02/doc/: README.MD
trunk/ii002713/task_02/src/: CMakeLists.txt  model.cpp  model.h  task_02.cpp
trunk/ii002713/task_02/test/: test.cpp
trunk/ii002713/task_03/: run.bat  sonar-project.properties
trunk/ii002713/task_03/doc/: Doxyfile.in  README.MD
trunk/ii002713/task_03/doc/html/: annotated.html  annotated_dup.js  class_model-members.html  class_model.html  class_model.js  class_p_i_d-members.html  class_p_i_d.html  class_p_i_d.js  classes.html  dir_e68e8157741866f444e17edd764ebbae.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp.js  main_8cpp__incl.map  main_8cpp__incl.md5  model_8cpp.html  model_8cpp__incl.map  model_8cpp__incl.md5  model_8h.html  model_8h.js  model_8h__dep__incl.map  model_8h__dep__incl.md5  model_8h_source.html  navtreedata.js  navtreeindex0.js  pid_8cpp.html  pid_8cpp__incl.map  pid_8cpp__incl.md5  pid_8h.html  pid_8h__dep__incl.map  pid_8h__dep__incl.md5  pid_8h__incl.map  (+3 more)
trunk/ii002713/task_03/doc/html/search/: all_0.js  all_2.js  all_3.js  all_5.js  all_6.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
trunk/ii002713/task_03/src/: CMakeLists.txt  main.cpp  model.cpp  model.h  pid.cpp  pid.h
trunk/ii002713/task_03/test/: test_pid.cpp
